--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    This page store information temporary. It will not store the activities for future use.<br><b>Informations will be reset if you reload the page.</b><br>Thanks.
+                    This page store information temporary. It will not store the activities for future
+                    use.<br><b>Informations will be reset if you reload the page.</b><br>Thanks.
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Lets Fire Up</button>
@@ -119,14 +120,29 @@
         </div>
 
         <!-- music part -->
-        <div class="mt-5">
+        <div class="my-5">
             <h3>Music</h3>
             <p>A beautiful music can help you to focus on your works.</p>
             <hr class="border border-primary border-2 opacity-65">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/v9XyIGXcRck?si=PKhEbhlSvtGw0Flg"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <div class="row text-center mb-4">
+                <div class="col-6">
+                    <!-- music 1 -->
+                    <iframe width="100%" height="100%"
+                        src="https://www.youtube.com/embed/v9XyIGXcRck?si=PKhEbhlSvtGw0Flg" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="col-6">
+                    <!-- music 2 -->
+                    <iframe width="100%" height="100%"
+                        src="https://www.youtube.com/embed/HW4e08JhLQY?si=mF7-ZzYwTNO2_xeG" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+            
         </div>
     </div>
 
