problem name input field added

--- a/index.html
+++ b/index.html
@@ -72,7 +72,24 @@
                                     data-bs-target="#exampleModal">Reset</button>
                             </div>
                         </td>
-                        <td><button type="button" class="btn btn-primary" id="increase">Increase</button></td>
+                        <td>
+                            <div class="row">
+                                    <div class="col-4">
+                                        <input type="text" class="form-control" placeholder="Problem Name" aria-label="Problem Name" aria-describedby="increase">
+                                    </div>
+                                    <div class="col-8">
+                                        <button class="btn btn-primary" type="button" id="increase">Increase</button>
+                                    </div>
+                            </div>
+                        </td>
+                        
+                        <!-- <td class="border border-primary">
+                            <div class="border border-primary">
+                                    <input type="text" class="form-control" placeholder="Problem Name"
+                                        aria-label="Problem Name" aria-describedby="increase">
+                                <button class="btn btn-primary" type="button" id="increase">Increase</button>
+                            </div>
+                        </td> -->
                     </tr>
                 </tbody>
             </table>
@@ -142,7 +159,7 @@
                         allowfullscreen></iframe>
                 </div>
             </div>
-            
+
         </div>
     </div>
 
