add problem name with problem number

--- a/index.html
+++ b/index.html
@@ -74,15 +74,17 @@
                         </td>
                         <td>
                             <div class="row">
-                                    <div class="col-4">
-                                        <input type="text" class="form-control" placeholder="Problem Name" aria-label="Problem Name" aria-describedby="increase">
-                                    </div>
-                                    <div class="col-8">
-                                        <button class="btn btn-primary" type="button" id="increase">Increase</button>
-                                    </div>
+                                <!-- take problem name(optional) -->
+                                <div class="col-4">
+                                    <input type="text" class="form-control" placeholder="Problem Name"
+                                        aria-label="Problem Name" aria-describedby="increase" id="problem_name">
+                                </div>
+                                <!-- increase button -->
+                                <div class="col-8">
+                                    <button class="btn btn-primary" type="button" id="increase">Increase</button>
+                                </div>
                             </div>
                         </td>
-                        
                         <!-- <td class="border border-primary">
                             <div class="border border-primary">
                                     <input type="text" class="form-control" placeholder="Problem Name"
