--- a/index.html
+++ b/index.html
@@ -42,10 +42,22 @@
 
     <!--  -->
     <div class="container">
+        <!-- heading -->
         <div class="mt-4">
-
-            <h1>CP Timer and Counter</h1>
-            <p>count number of problems you solved in a day and time spend on solving problems</p>
+            <div class="row">
+                <div class="col">
+                    <h1>CP Timer and Counter</h1>
+                </div>
+                <!-- github link -->
+                <div class="col text-end">
+                    <a href="https://github.com/mursalatul/cp-tracker"><svg xmlns="http://www.w3.org/2000/svg"
+                            width="30" height="30" class="bi bi-github" viewBox="0 0 16 16">
+                            <path
+                                d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+                        </svg></a>
+                </div>
+            </div>
+            <p>Count number of problems you solved and time spend on solving problems</p>
             <hr class="border border-primary border-2 opacity-65">
 
             <!-- table -->
@@ -85,13 +97,6 @@
                                 </div>
                             </div>
                         </td>
-                        <!-- <td class="border border-primary">
-                            <div class="border border-primary">
-                                    <input type="text" class="form-control" placeholder="Problem Name"
-                                        aria-label="Problem Name" aria-describedby="increase">
-                                <button class="btn btn-primary" type="button" id="increase">Increase</button>
-                            </div>
-                        </td> -->
                     </tr>
                 </tbody>
             </table>
@@ -163,6 +168,49 @@
             </div>
 
         </div>
+
+        <!-- footer -->
+        <div class="my-5">
+            <section class="">
+                <!-- Footer -->
+                <footer class="text-center text-white" style="background-color: #0a4275;">
+                    <!-- Grid container -->
+                    <div class="container p-4 pb-0">
+                        <!-- Section: CTA -->
+                        <section class="">
+                            <p class="d-flex justify-content-center align-items-center">
+                                <span class="me-3">Feel Free To Contribute or Report An Issue</span>
+                                <button type="button" class="btn btn-outline-light btn-rounded" id="git_btn_footer">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                                        class="bi bi-github" viewBox="0 0 16 16">
+                                        <path
+                                            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+                                    </svg>
+                                </button>
+                                <script>
+                                    let git_btn_footer = document.getElementById("git_btn_footer");
+                                    git_btn_footer.addEventListener('click', function() {
+                                        window.open("https://github.com/mursalatul/cp-tracker", "_blank");
+                                    });
+                                </script>
+                            </p>
+                        </section>
+                        <!-- Section: CTA -->
+                    </div>
+                    <!-- Grid container -->
+
+                    <!-- Copyright -->
+                    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                        © 2023 Copyright:
+                        <a class="text-white">mursalatul</a>
+                    </div>
+                    <!-- Copyright -->
+                </footer>
+                <!-- Footer -->
+            </section>
+
+        </div>
+        <!-- End of .container -->
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
