--- a/index.html
+++ b/index.html
@@ -166,6 +166,15 @@
                         allowfullscreen></iframe>
                 </div>
             </div>
+            <div class="row text-center mb-4">
+                <div class="col-6">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/h3h035Eyz5A?si=KYSbd3Vwpk5oKeZP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <div class="col-6">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/NKG-hqgKQy8?si=RrvfwgMWyDQcnw98" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                
+            </div>
 
         </div>
 
