adding profile link

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <!-- Copyright -->
                     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
                         © 2023 Copyright:
-                        <a class="text-white">mursalatul</a>
+                        <a class="text-white" href="https://github.com/mursalatul">mursalatul</a>
                     </div>
                     <!-- Copyright -->
                 </footer>
