--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
                             </div>
                         </td>
                         <td>
-                            <div class="row border">
+                            <div class="row">
                                 <div class="col-8 my-1">
                                     <button class="btn btn-primary" type="button" id="timerstart">Start Timer</button>
                                     <button class="btn btn-primary mx-1" type="button" id="timerstop">Stop Timer</button>
                                     <button class="btn btn-primary" type="button" id="timernew">New Timer</button>
                                 </div>
                             </div>
-                            <div class="row border">
+                            <div class="row">
                                 <!-- take problem name(optional) -->
                                 <div class="col-4">
                                     <input type="text" class="form-control" placeholder="Problem Name"
